addons/evm/fixtures/integration/errors/missing_signer.tx
addon "evm" {
    chain_id = input.chain_id
    rpc_api_url = input.rpc_url
}

# Reference non-existent signer - should fail
action "send" "evm::send_eth" {
    recipient_address = "0x70997970C51812dc3A010C7d01b50e0d17dc79C8"
    amount = 100
    signer = signer.nonexistent_signer
}

output "tx_hash" {
    value = action.send.tx_hash
}